Final changes to the pages, changed the link path as well

--- a/online-consultations/online-consultations.html
+++ b/online-consultations/online-consultations.html
@@ -20,11 +20,12 @@
         </a>
                 <input class="menu__btn" type="checkbox" id="menu__btn">
                 <label class="menu__icon" for="menu__btn"><span class="nav__icon"></span></label>
+                
                 <ul class="menu">
-                    <li><a href="about.html">ABOUT US</a></li>
-                    <li><a href="services.html">SERVICES</a></li>
-                    <li><a href="referral-pathways.html">REFERRAL PATHWAYS</a></li>
-                    <li><a href="online-consultations.html">ONLINE CONSULTATIONS</a></li>
+                    <li><a href="https://www.melbsuclinic.com.au/about/">ABOUT US</a></li>
+                    <li><a href="https://www.melbsuclinic.com.au/services/">SERVICES</a></li>
+                    <li><a href="https://www.melbsuclinic.com.au/referral-pathways/">REFERRAL PATHWAYS</a></li>
+                    <li><a href="https://www.melbsuclinic.com.au/online-consultations/">ONLINE CONSULTATIONS</a></li>
                     <li class="btn__secondary btn__secondary--nav"><a href="#contact" class="btn__secondary--nav--a">CONTACT US</a></li>
                 </ul>
     </header>
@@ -135,13 +136,14 @@
             <div class="footer__item">
                 <ul class="footer__list">
                     <li class="footer__list-item">
-                        <a href="about.html">About us</a>
+                        <a href="https://www.melbsuclinic.com.au/about/">About us</a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="what-is-hypnosis.html">What is Hypnosis</a>
+                        <a href="https://www.melbsuclinic.com.au/services/">Services</a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="treatment-programs.html">Private Outpatient Treatment Programs</a>
+                        <a href="https://www.melbsuclinic.com.au/referral-pathways/">REFERRAL PATHWAYS
+                        </a>
                     </li>
                 </ul>
                 <p class="footer__copyright">Copyright ©2020&nbsp;|&nbsp;Melbourne Substance Use Clinic. Designed by <a href="https://ovlachi.com/" target="_blank">ovlachi</a>
@@ -149,27 +151,27 @@
             </div>
 
             <div class="footer__item">
-                <a href="index.html"><img src="img/MSUC-logo-version-WHITE.png" alt="MSUC logo hite" class="footer__logo"></a>
+                <a href="https://www.melbsuclinic.com.au/"><img src="img/MSUC-logo-version-WHITE.png" alt="MSUC logo hite" class="footer__logo"></a>
             </div>
 
             <div class="footer__item">
                 <ul class="footer__list">
                     <li class="footer__list-item">
-                        <a href="online-consultations.html">ONLINE CONSULTATIONS</a>
+                        <a href="https://www.melbsuclinic.com.au/online-consultations/">ONLINE CONSULTATIONS</a>
                     </li>
                     <li class="footer__list-item">
                         <a href="#contact">CONTACT US</a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="privacy.html">PRIVACY AND CONFIDENTIALITY</a>
+                        <a href="https://www.melbsuclinic.com.au/privacy/">PRIVACY AND CONFIDENTIALITY</a>
                     </li>
                 </ul>
                 <svg class="footer__icon">
-                <a href="https://www.facebook.com/Melbourne-Substance-Use-Clinic-MSUC-114898983396330/" target="_blank" aria-label="Melbourne Substance Use Clinic's Facebook page">
+                <a href="https://www.facebook.com/Melbourne-Substance-Use-Clinic-MSUC-114898983396330/" target="_blank">
                     <use xlink:href="img/sprite.svg#icon-facebook2"></use>
                 </a></svg>
                 <svg class="footer__icon">
-                <a href="https://www.instagram.com/melbourne_substance_use_clinic/" target="_blank" aria-label="Melbourne Substance Use Clinic's Instagram page"><use xlink:href="img/sprite.svg#icon-instagram"></use>
+                <a href="https://www.instagram.com/melbourne_substance_use_clinic/" target="_blank"><use xlink:href="img/sprite.svg#icon-instagram"></use>
                 </a></svg>
             </div>
         </div>
