--- a/privacy/privacy.html
+++ b/privacy/privacy.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--SEO-User defined-->
-    <meta name="keywords" content="addiction, counselling, psychological services, substance use, withdrawal symptoms, treatment programs, hypnosis, inner strength, confidence" />
+    <meta name="keywords" content="substance use, withdrawal symptoms, treatment programs, hypnosis, inner strength, confidence" />
     <meta name="description" content="Melbourne Substance Use Clinic was founded in 2020, by a small, multidisciplinary team of clinicians, registered psychologists, nurse practitioners, who have been supporting people with substance dependence." />
     <meta name="author" content="Melbourne Substance Use Clinic" />
     <meta name="copyright" content="Melbourne Substance Use Clinic, 2020" />
@@ -11,7 +11,7 @@
     <!--GOOGLE FONTS-->
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Melbourne Substance Use and Psychology Clinic</title>
+    <title>Privacy and confidentiality - Melbourne Substance Use Clininc</title>
 </head>
 <body>
     <header class="header">
@@ -30,77 +30,36 @@
                 </ul>
     </header>
 
-    <section class="hero">
-        <div class="hero__text-box">
-            <h1 class="hero__heading-primary">
-                Addiction and Psychology Services
-            </h1>
-
-            <a href="https://www.melbsuclinic.com.au/services/" class="btn__primary btn__primary--medium">LEARN MORE</a>
-        </div>
-       
+    <section class="hero__privacy">
+        &nbsp;
     </section>
+
     <section class="alert">
         <div class="alert__box">
             <p class="alert__text">In response to COVID-19 
                 <span><a href="https://www.melbsuclinic.com.au/online-consultations/" class="alert__text--a">online consultations</a></span> are available via ZOOM or Skype</p>
         </div>
     </section>
+
+    <section class="wrapper intro u-margin__top--medium u-margin__bottom--large">
+        <h3 class="featured__title u-margin__bottom--small">
+            PRIVACY AND CONFIDENTIALITY
+        </h3>
+        <p class="u-margin__bottom--small">The service provided at MSUC is bound by the legal requirements of the <strong>National Privacy Principles</strong> from the <i>Privacy Amendment (Private Sector) Act 2000. </i></p>
+        <p class="u-margin__bottom--small">As part of providing services to you, our clinicians will need to collect and record your personal information. Most information will be held in a secure online platform used by health professionals (for billing, contact information and case notes). 
+            All information within this online platform is password protected, secure, and encrypted and all hard copy information will be kept in a locked filing cabinet in a locked office in a secure building to ensure your privacy.
+            </p>
+            <p class="u-margin__bottom--small">At any stage clients may request to access the information recorded by the clinician. Your clinician may discuss the contents with them and/or give them a copy.  
+                All requests by clients for access to information held about them should be lodged with their allocated clinician at the clinic. These requests will be responded to within 10 days.
+                 </p>
+        <p class="u-margin__bottom--small"><strong>All personal information</strong> gathered by our clinic <strong>is confidential</strong> – except in the following circumstances:</p>
+        <ul>
+            <li><strong>Your information</strong> is subpoenaed by the court, and/or</li>
+            <li><strong>Failure to disclose</strong> the information would place you or another person at risk; and/or:</li>
+            <li><strong>Your prior approval</strong> has been obtained to provide a written report to another professional or agency, e.g. a GP or a lawyer or to discuss the material with another person, e.g. a parent or employer.</li>
+        </ul>
+    </section>
     
-    <section class="wrapper home__intro">
-        <h2 class="home__intro__heading u-margin__top--small">    MELBOURNE SUBSTANCE USE CLINIC
-        </h2>
-        <p class="home__intro__text">The MSUC was founded in 2020 by a small, multidisciplinary team of clinicians (registered psychologists, nurse practitioners, etc.), who have been supporting people with substance dependence over the years. </p>
-
-        <a href="https://www.melbsuclinic.com.au/about/" class="btn__secondary u-margin__top--medium">LEARN MORE</a>
-    </section>
-
-    <section class="wrapper featured u-margin__top--large">
-        <div class="featured__item">
-                <img src="img/services-normal.jpg" alt="evidence-based psychological services" class="featured__image">
-        </div>
-        <div class="featured__item u-margin__bottom--extra-large">
-                <svg class="featured__icon">
-                    <use xlink:href="img/sprite.svg#icon-private-outpatient"></use>
-                </svg>
-                <h2 class="featured__title u-margin__bottom--small">Services</h2>
-                <p class="featured__text">We are dedicated to providing high quality and evidence-based psychological services to people experiencing a range of mental health challenges.</p>
-                <a href="https://www.melbsuclinic.com.au/services/" class="btn__secondary u-margin__top--medium">LEARN MORE</a>
-        </div> 
-    </section>
-
-    <section class="wrapper featured u-margin__top--large">
-        <div class="featured__item "id="featured__two">
-            <img src="img/referral-pathways-normal.jpg" alt="referral pathways" class="featured__image">
-        </div>
-        <div class="featured__item">
-                <svg class="featured__icon">
-                    <use xlink:href="img/sprite.svg#icon-referal-pathways"></use>
-                </svg>
-                <h3 class="featured__title u-margin__bottom--small">Referral Pathways and Assessment Process</h3>
-                <p class="featured__text">You can refer yourself to the MSUC, however a referral from other treatment providers (GP, psychiatrist, etc.) is also possible.</p>
-                <a href="https://www.melbsuclinic.com.au/referral-pathways/" class="btn__secondary u-margin__top--medium u-margin__bottom--medium">LEARN MORE</a>
-        </div> 
-        <div class="featured__item" id="featured__one">
-            <img src="img/referral-pathways-normal.jpg" alt="referral pathways" class="featured__image">
-        </div>
-    </section>
-
-    <section class="wrapper featured u-margin__top--large u-margin__bottom--large" id="featured__three">
-        <div class="featured__item">
-                <img src="img/what-is-hypnosis-normal.jpg" alt="man in altered states of consciousness" class="featured__image">
-        </div>
-        <div class="featured__item">
-                <svg class="featured__icon">
-                    <use xlink:href="img/sprite.svg#icon-what-is-hypnozis"></use>
-                </svg>
-                <h3 class="featured__title u-margin__bottom--small">What is Hypnosis</h3>
-                <p class="featured__text">As a matter of fact, we all experience altered states of consciousness in our day to day lives, in the form of daydreaming, focused attention, or deep concentration.</p>
-                <a href="https://www.melbsuclinic.com.au/what-is-hypnosis/" class="btn__secondary u-margin__top--medium">LEARN MORE</a>
-        </div> 
-    </section>
-   
-
     <section class="contact" id="contact">
         <div class="wrapper contact__box">
             <h3 class="home__intro__heading u-margin__bottom--small u-margin__top--small">Contact us</h3>
@@ -108,7 +67,7 @@
                 Please give us a call, send an email or use the contact form below to get in touch.
             </p>
             <p class="contact__details u-margin__top--medium u-margin__bottom--medium">
-                M: 0426 696 377<br>
+                M: 0426 696 377 <br>
             info@melbsuclinic.com.au
             </p>
 
