--- a/what-is-hypnosis/what-is-hypnosis.html
+++ b/what-is-hypnosis/what-is-hypnosis.html
@@ -11,7 +11,7 @@
     <!--GOOGLE FONTS-->
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Referral Pathways - Melbourne Substance Use Clininc</title>
+    <title>What is Hypnosis - Melbourne Substance Use Clininc</title>
 </head>
 <body>
     <header class="header">
@@ -22,39 +22,55 @@
                 <label class="menu__icon" for="menu__btn"><span class="nav__icon"></span></label>
             
                 <ul class="menu">
-                    <li><a href="about.html">ABOUT US</a></li>
-                    <li><a href="services.html">SERVICES</a></li>
-                    <li><a href="referral-pathways.html">REFERRAL PATHWAYS</a></li>
-                    <li><a href="online-consultations.html">ONLINE CONSULTATIONS</a></li>
+                    <li><a href="https://www.melbsuclinic.com.au/about/">ABOUT US</a></li>
+                    <li><a href="https://www.melbsuclinic.com.au/services/">SERVICES</a></li>
+                    <li><a href="https://www.melbsuclinic.com.au/referral-pathways/">REFERRAL PATHWAYS</a></li>
+                    <li><a href="https://www.melbsuclinic.com.au/online-consultations/">ONLINE CONSULTATIONS</a></li>
                     <li class="btn__secondary btn__secondary--nav"><a href="#contact" class="btn__secondary--nav--a">CONTACT US</a></li>
                 </ul>
     </header>
 
-    <section class="hero__referral">
+    <section class="hero__hypnosis">
         &nbsp;
     </section>
 
     <section class="alert">
         <div class="alert__box">
             <p class="alert__text">In response to COVID-19 
-                <span><a href="online-consultations.html" class="alert__text--a">online consultations</a></span> are available via ZOOM or Skype</p>
+                <span><a href="https://www.melbsuclinic.com.au/online-consultations/" class="alert__text--a">online consultations</a></span> are available via ZOOM or Skype</p>
         </div>
     </section>
 
-    <section class="wrapper intro u-margin__top--medium u-margin__bottom--large">
+    <section class="wrapper intro u-margin__top--medium">
         <h3 class="featured__title u-margin__bottom--small">
-            REFERRAL PATHWAYS AND ASSESSMENT PROCESS
+            WHAT IS HYPNOSIS?
         </h3>
-        <p class="u-margin__bottom--small">You can refer yourself to the MSUC, however a referral from other treatment providers (GP, psychiatrist, etc.) is also possible.</p>
-        <p class="u-margin__bottom--small">Your treatment at our clinic starts with an <strong>initial consultation.</strong>
-        </p>
-        <p class="u-margin__bottom--small">The purpose of the initial consultation is to assess your specific treatment needs and determine whether our treatment programs are able to meet these.</p>
-        <p class="u-margin__bottom--small">This session usually takes up to 60-90 minutes.</p>
-        <p class="u-margin__bottom--small">Following the initial consultation we may administer a set of selected <strong>questionnaires, scales or tests.</strong> The time involved depends on the selected measures (usually 60-90 minutes).</p>
-        <p class="u-margin__bottom--small"><strong>Measuring your susceptibility</strong> to the hypnotic suggestions (using a standardized measure) is usually a core part of the assessment process.</p>
-        <p class="u-margin__bottom--small">After the initial consultation and the assessment sessions (this usually means having to attend three appointments altogether), we will determine whether our clinic/programs are the best treatment option for you at the moment.
-        </p>
+        <p class="u-margin__bottom--small">The word hypnosis comes from the Greek work “hypnos”, meaning sleep, resulting from the physical appearance of one sleeping. It is however not sleep.</p>
+        <p class="u-margin__bottom--small">Hypnosis has multiple definitions. The 2014 revised definition of Hypnosis is:</p>
+    </section>
 
+    <section class="quote">
+        <div class="wrapper quote__box">
+            <blockquote class="quote__text u-margin__bottom--medium">A state of consciousness involving focused attention and reduced peripheral awareness characterized by an enhanced capacity for response to suggestion.
+            </blockquote>
+            <footer class="quote__footer">
+                <cite class="quote__cite">International Journal of Clinical and Experimental Hypnosis</cite>
+            </footer>
+        </div>
+    </section>
+
+    <section class="wrapper intro">
+        <p class="u-margin__bottom--small u-margin__top--medium">The definition of “Hypnotherapy”, suggested by the same committee in 2014 is as follows: “The use of hypnosis in the treatment of a medical or psychological disorder or concern.”
+        </p>
+        <p class="u-margin__bottom--small ">As a matter of fact, we all experience altered states of consciousness in our day to day lives, in the form of daydreaming, focused attention, or deep concentration. It is even liken to meditation and prayer. It is important to remember, that all hypnosis is SELF HYPNOSIS – meaning, if you don’t fully agree to the process, if you are not motivated, it can hardly happen.  
+        </p>
+        <p class="u-margin__bottom--large ">Hypnosis ultimately taps into the functioning of the unconscious mind. It is the unconscious mind that is like our central processing unit that communicates not only with our conscious mind, but also with our body.  
+        </p>
+        <h3 class="featured__title u-margin__bottom--small">
+            Myths about Hypnosis
+        </h3>
+        <p class="u-margin__bottom--small">There are a number of common myths about hypnosis, resulting from the entertainment industry (i.e. stage hypnotist). For example, there is the belief that you might lose control while in hypnosis. However, it is not possible to hypnotize anyone against their will. With hypnotherapy, you are totally aware of what is being said and at no time do you lose control. Therefore, clinical- or therapeutic hypnosis, assisted by a qualified health professional should never be confused with stage hypnosis.
+            <a href="https://www.hypnosisalliance.com/imdha/myths.php" target="_blank" class="text__hyperlink">Find out more</a> about the most common myths related to hypnosis.</p>
 
     </section>
     
@@ -105,13 +121,14 @@
             <div class="footer__item">
                 <ul class="footer__list">
                     <li class="footer__list-item">
-                        <a href="about.html">About us</a>
+                        <a href="https://www.melbsuclinic.com.au/about/">About us</a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="what-is-hypnosis.html">What is Hypnosis</a>
+                        <a href="https://www.melbsuclinic.com.au/services/">Services</a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#">Private Outpatient Treatment Programs</a>
+                        <a href="https://www.melbsuclinic.com.au/referral-pathways/">REFERRAL PATHWAYS
+                        </a>
                     </li>
                 </ul>
                 <p class="footer__copyright">Copyright ©2020&nbsp;|&nbsp;Melbourne Substance Use Clinic. Designed by <a href="https://ovlachi.com/" target="_blank">ovlachi</a>
@@ -119,19 +136,19 @@
             </div>
 
             <div class="footer__item">
-                <a href="index.html"><img src="img/MSUC-logo-version-WHITE.png" alt="MSUC logo hite" class="footer__logo"></a>
+                <a href="https://www.melbsuclinic.com.au/"><img src="img/MSUC-logo-version-WHITE.png" alt="MSUC logo hite" class="footer__logo"></a>
             </div>
 
             <div class="footer__item">
                 <ul class="footer__list">
                     <li class="footer__list-item">
-                        <a href="online-consultations.html">ONLINE CONSULTATIONS</a>
+                        <a href="https://www.melbsuclinic.com.au/online-consultations/">ONLINE CONSULTATIONS</a>
                     </li>
                     <li class="footer__list-item">
                         <a href="#contact">CONTACT US</a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="privacy.html">PRIVACY AND CONFIDENTIALITY</a>
+                        <a href="https://www.melbsuclinic.com.au/privacy/">PRIVACY AND CONFIDENTIALITY</a>
                     </li>
                 </ul>
                 <svg class="footer__icon">
