Changed About us

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <label class="menu__icon" for="menu__btn"><span class="nav__icon"></span></label>
             
                 <ul class="menu">
-                    <li><a href="about.html">ABOUT US</a></li>
+                    <li><a href="https://www.melbsuclinic.com.au/about/">ABOUT US</a></li>
                     <li><a href="https://www.melbsuclinic.com.au/services/">SERVICES</a></li>
                     <li><a href="https://www.melbsuclinic.com.au/referral-pathways/">REFERRAL PATHWAYS</a></li>
                     <li><a href="https://www.melbsuclinic.com.au/online-consultations/">ONLINE CONSULTATIONS</a></li>
