Changed Services broken links and added favicons

--- a/services.html
+++ b/services.html
@@ -8,6 +8,9 @@
     <meta name="author" content="Melbourne Substance Use Clinic" />
     <meta name="copyright" content="Melbourne Substance Use Clinic, 2020" />
     <meta name="robots" content="index, follow">
+    <!--FAVICON-->
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <!--GOOGLE FONTS-->
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
@@ -49,7 +52,7 @@
             </h3>
             <p class="u-margin__bottom--medium">Our main approach used during treatment is <a href="https://www.melbsuclinic.com.au/what-is-hypnosis/" class="text__hyperlink">clinical hypnosis</a>, which is the underpinning psychological approach for all our outpatient treatment programs. Clinical hypnotherapy is an <strong>evidence-based treatment for addiction</strong>, as well as a range of other psychological difficulties and mental health conditions.
             </p>
-            <a href="https://www.melbsuclinic.com.au/services/specialist-addiction/" class="btn__secondary btn__secondary--left u-margin__bottom--medium">Learn more</a>
+            <a href="https://www.melbsuclinic.com.au/specialist-addiction/" class="btn__secondary btn__secondary--left u-margin__bottom--medium">Learn more</a>
         </div>
         <div class="services__box">
           <h3 class="featured__title u-margin__bottom--small">
@@ -57,7 +60,7 @@
           </h3>
           <p class="u-margin__bottom--medium">We are dedicated to providing high quality and evidence-based psychological services to people experiencing a range of mental health challenges. Our Psychologists are experienced in providing <strong>psychological therapy and treatment</strong> for a number of issues.
           </p>
-          <a href="https://www.melbsuclinic.com.au/services/psychological-services/" class="btn__secondary btn__secondary--left u-margin__bottom--medium">Learn more</a>
+          <a href="https://www.melbsuclinic.com.au/psychological-services/" class="btn__secondary btn__secondary--left u-margin__bottom--medium">Learn more</a>
       </div>
     </section>
     
