--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <meta name="author" content="Melbourne Substance Use Clinic" />
     <meta name="copyright" content="Melbourne Substance Use Clinic, 2020" />
     <meta name="robots" content="index, follow">
+    <!--FAVICON-->
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+
     <!--GOOGLE FONTS-->
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
@@ -48,7 +52,7 @@
     </section>
     
     <section class="wrapper home__intro">
-        <h2 class="home__intro__heading u-margin__top--small">    MELBOURNE SUBSTANCE USE CLINIC
+        <h2 class="home__intro__heading u-margin__top--small"> Melbourne Substance Use and Psychology Clinic
         </h2>
         <p class="home__intro__text">The MSUC was founded in 2020 by a small, multidisciplinary team of clinicians (registered psychologists, nurse practitioners, etc.), who have been supporting people with substance dependence over the years. </p>
 
