--- a/referral-pathways.html
+++ b/referral-pathways.html
@@ -8,6 +8,9 @@
     <meta name="author" content="Melbourne Substance Use Clinic" />
     <meta name="copyright" content="Melbourne Substance Use Clinic, 2020" />
     <meta name="robots" content="index, follow">
+    <!--FAVICON-->
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <!--GOOGLE FONTS-->
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
