--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <!--GOOGLE FONTS-->
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
-    <title>About us - Melbourne Substance Use Clininc</title>
+    <title>About us - Melbourne Substance Use and Psychology Clinic</title>
 </head>
 <body>
     <header class="header">
@@ -46,7 +46,7 @@
 
     <section class="wrapper intro">
         <p class="intro__text u-margin__top--large u-margin__bottom--large">
-            The MSUC was founded in 2020 by a small, multidisciplinary team of clinicians (registered psychologists, nurse practitioners, etc.), who have been supporting people with substance dependence over the years. 
+            The MSUPC was founded in 2020 by a small, multidisciplinary team of clinicians (registered psychologists, nurse practitioners, etc.), who have been supporting people with substance dependence over the years. 
         </p>
         <p class="u-margin__bottom--large ">We offer <a href="https://www.melbsuclinic.com.au/services/" class="text__hyperlink"><strong>specialist assessment and counselling</a> </strong>for individuals experiencing <strong>substance dependence</strong> and/or <strong>other mental health issues</strong>, ranging from mild to moderate.</p>
     </section>
@@ -54,7 +54,7 @@
     <section class="highlight u-margin__bottom--large">
         <div class="wrapper highlight__box">
             <h3 class="featured__title u-margin__bottom--small">
-                As a client of the MSUC you have a right to expect that:
+                As a client of the MSUPC you have a right to expect that:
             </h3>
             <ul class="highlight__list u-margin__bottom--large">
                 <li class="highlight__list--item">	You will be treated with <strong>respect</strong></li>
@@ -134,7 +134,7 @@
                         </a>
                     </li>
                 </ul>
-                <p class="footer__copyright">Copyright ©2020&nbsp;|&nbsp;Melbourne Substance Use Clinic. Designed by <a href="https://ovlachi.com/" target="_blank">ovlachi</a>
+                <p class="footer__copyright">Copyright ©2020&nbsp;|&nbsp;Melbourne Substance Use and Psychology Clinic. Designed by <a href="https://ovlachi.com/" target="_blank">ovlachi</a>
                      </p>
             </div>
 
