--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <!--SEO-User defined-->
     <meta name="keywords" content="addiction, counselling, psychological services, substance use, withdrawal symptoms, treatment programs, hypnosis, inner strength, confidence" />
     <meta name="description" content="Melbourne Substance Use Clinic was founded in 2020, by a small, multidisciplinary team of clinicians, registered psychologists, nurse practitioners, who have been supporting people with substance dependence." />
-    <meta name="author" content="Melbourne Substance Use Clinic" />
-    <meta name="copyright" content="Melbourne Substance Use Clinic, 2020" />
+    <meta name="author" content="Melbourne Substance Use and Psychology Clinic" />
+    <meta name="copyright" content="Melbourne Substance Use and Psychology Clinic, 2020" />
     <meta name="robots" content="index, follow">
     <!--FAVICON-->
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -54,7 +54,7 @@
     <section class="wrapper home__intro">
         <h2 class="home__intro__heading u-margin__top--small"> Melbourne Substance Use and Psychology Clinic
         </h2>
-        <p class="home__intro__text">The MSUC was founded in 2020 by a small, multidisciplinary team of clinicians (registered psychologists, nurse practitioners, etc.), who have been supporting people with substance dependence over the years. </p>
+        <p class="home__intro__text">The MSUPC was founded in 2020 by a small, multidisciplinary team of clinicians (registered psychologists, nurse practitioners, etc.), who have been supporting people with substance dependence over the years. </p>
 
         <a href="https://www.melbsuclinic.com.au/about/" class="btn__secondary u-margin__top--medium">LEARN MORE</a>
     </section>
@@ -82,7 +82,7 @@
                     <use xlink:href="img/sprite.svg#icon-referal-pathways"></use>
                 </svg>
                 <h3 class="featured__title u-margin__bottom--small">Referral Pathways and Assessment Process</h3>
-                <p class="featured__text">You can refer yourself to the MSUC, however a referral from other treatment providers (GP, psychiatrist, etc.) is also possible.</p>
+                <p class="featured__text">You can refer yourself to the MSUPC, however a referral from other treatment providers (GP, psychiatrist, etc.) is also possible.</p>
                 <a href="https://www.melbsuclinic.com.au/referral-pathways/" class="btn__secondary u-margin__top--medium u-margin__bottom--medium">LEARN MORE</a>
         </div> 
         <div class="featured__item" id="featured__one">
@@ -162,7 +162,7 @@
                         </a>
                     </li>
                 </ul>
-                <p class="footer__copyright">Copyright ©2020&nbsp;|&nbsp;Melbourne Substance Use Clinic. Designed by <a href="https://ovlachi.com/" target="_blank">ovlachi</a>
+                <p class="footer__copyright">Copyright ©2020&nbsp;|&nbsp;Melbourne Substance Use and Psychology Clinic. Designed by <a href="https://ovlachi.com/" target="_blank">ovlachi</a>
                      </p>
             </div>
 
