--- a/referral-pathways.html
+++ b/referral-pathways.html
@@ -14,7 +14,7 @@
     <!--GOOGLE FONTS-->
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Referral Pathways - Melbourne Substance Use Clininc</title>
+    <title>Referral Pathways - Melbourne Substance Use and Psychology Clinic</title>
 </head>
 <body>
     <header class="header">
@@ -118,7 +118,7 @@
                         </a>
                     </li>
                 </ul>
-                <p class="footer__copyright">Copyright ©2020&nbsp;|&nbsp;Melbourne Substance Use Clinic. Designed by <a href="https://ovlachi.com/" target="_blank">ovlachi</a>
+                <p class="footer__copyright">Copyright ©2020&nbsp;|&nbsp;Melbourne Substance Use and Psychology Clinic. Designed by <a href="https://ovlachi.com/" target="_blank">ovlachi</a>
                      </p>
             </div>
 
