--- a/specialist-addiction.html
+++ b/specialist-addiction.html
@@ -14,7 +14,7 @@
     <!--GOOGLE FONTS-->
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Specialist addiction counselling - Melbourne Substance Use Clininc</title>
+    <title>Specialist addiction counselling - Melbourne Substance Use and Psychology Clinic</title>
 </head>
 <body>
     <header class="header">
@@ -104,10 +104,10 @@
     <p class="u-margin__bottom--small">A referral under the Medicare system entitles you for <strong>up to 10 'rebated' counselling sessions per calendar year</strong> (please have your GP complete the referral specifically to your allocated clinician at the Melbourne Substance Use and Psychology Clinic). 
     </p>
     <ul class="u-margin__bottom--medium">
-        <li>Clients with a <strong>Mental Health Plan</strong> from a referring psychiatrist or GP are eligible to claim a Medicare rebate, which will reduce the out-of-pocket expense per session</li>
-        <li>There is provision for <strong>bulk-billing</strong> for those undergoing financial hardship in which case there will be no out of pocket fee (as Medicare will be billed directly). </li>
+        <li>Clients with a <strong>Mental Health Care Plan</strong> from a referring psychiatrist or GP are eligible to claim a Medicare rebate, which will reduce the out-of-pocket expense per session</li>
+        <li>There is provision for <strong>bulk-billing</strong> for those undergoing financial hardship in which case there will be no out of pocket fee (as Medicare will be billed directly) </li>
         <li>Under the Medicare system, you must have a <strong>review with the referre</strong>r after the first six sessions to continue receiving the rebate for the final four sessions</li>
-        <li>If treatment extends <strong>beyond 10 sessions</strong>, the cost will continue to be as agreed per session to be paid on the day of treatment. For those who were bulk-billed, the cost of sessions will be negotiated on a <strong>sliding scale</strong> based on current income.</li>
+        <li>If treatment extends <strong>beyond 10 sessions</strong>, the cost will continue to be as agreed per session to be paid on the day of treatment. For those who were bulk-billed, the cost of sessions will be negotiated on a <strong>sliding scale</strong> based on current income</li>
         <li>Please note that <strong>bulk-billing spaces are limited;</strong> please enquire when the next appointments are available.</li>
     </ul>
     <a href="#contact" class="btn__secondary btn__secondary--left u-margin__bottom--medium">Enquire now</a>
@@ -194,7 +194,7 @@
                         </a>
                     </li>
                 </ul>
-                <p class="footer__copyright">Copyright ©2020&nbsp;|&nbsp;Melbourne Substance Use Clinic. Designed by <a href="https://ovlachi.com/" target="_blank">ovlachi</a>
+                <p class="footer__copyright">Copyright ©2020&nbsp;|&nbsp;Melbourne Substance Use and Psychology Clinic. Designed by <a href="https://ovlachi.com/" target="_blank">ovlachi</a>
                      </p>
             </div>
 
