Changes on multiple files

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <h1 class="hero__heading-primary">
                 Addiction and Psychology Services
             </h1>
+            <p class="hero__heading-secondary">Face to face or online sessions, for everyone, from private outpatient treatment programs to bulk billing.</p>
 
             <a href="https://www.melbsuclinic.com.au/services/" class="btn__primary btn__primary--medium">LEARN MORE</a>
         </div>
