--- a/privacy.html
+++ b/privacy.html
@@ -48,7 +48,7 @@
         <h3 class="featured__title u-margin__bottom--small">
             PRIVACY AND CONFIDENTIALITY
         </h3>
-        <p class="u-margin__bottom--small">The service provided at MSUC is bound by the legal requirements of the <strong>National Privacy Principles</strong> from the <i>Privacy Amendment (Private Sector) Act 2000. </i></p>
+        <p class="u-margin__bottom--small">The service provided at MSUPC is bound by the legal requirements of the <strong>National Privacy Principles</strong> from the <i>Privacy Amendment (Private Sector) Act 2000. </i></p>
         <p class="u-margin__bottom--small">As part of providing services to you, our clinicians will need to collect and record your personal information. Most information will be held in a secure online platform used by health professionals (for billing, contact information and case notes). 
             All information within this online platform is password protected, secure, and encrypted and all hard copy information will be kept in a locked filing cabinet in a locked office in a secure building to ensure your privacy.
             </p>
