--- a/services.html
+++ b/services.html
@@ -63,6 +63,10 @@
           <a href="https://www.melbsuclinic.com.au/psychological-services/" class="btn__secondary btn__secondary--left u-margin__bottom--medium">Learn more</a>
       </div>
     </section>
+
+    <section class="wrapper home__intro"> 
+        <p class="home__intro__text">PLEASE NOTE: We do not offer emergency mental health services. If you are struggling with your mental health, please call 000 or Lifeline on 13 11 14. </p>
+    </section>
     
     <section class="contact" id="contact">
         <div class="wrapper contact__box">
